<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Attack App!</string>
    <string name="firstName">First Name</string>
    <string name="secondName">Second Name</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="security_pin">security pin (Enter 4 digits)</string>
    <string name="re_enter_pin">Re-enter pin</string>
    <string name="save_new">Save new</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="language_select">Select the language you want</string>
    <string name="what_is_word_activation_and_decibel_system"><u>What is word activation and decibel system?</u></string>
    <string name="explanation"><b><u>Word activation:</u></b> You can activate the attack button by saying a word that you type into 
        the text field above.(default value is help) \n<b><u> Decibel system:</u></b> When noise goes over a certain decibel level, the attack 
        button will ativate (Decibel sensitivity varies for different handsets).</string> 
    <string name="gps_message">Please enable your GPS to access your location</string> 
    <string name="gps_settings">Gps settings</string> 
    <string name="seconds_remaining">"Seconds remaining till send: "</string> 
    <string name="send_has_been_deactivated">Send has been Deactivated</string> 
    <string name="information_not_sent_">"Information not sent "</string> 
    <string name="on">ON</string> 
    <string name="next">Next</string> 
    <string name="empty">empty</string> 
    <string name="_from_contacts">" from contacts"</string> 
    <string name="do_you_want_to_delete_">"Do you want to delete "</string> 
    <string name="delete">Delete</string> 
    <string name="cancel">Cancel</string> 
    <string name="enter_pin">Enter Pin</string> 
    <string name="ok">Ok</string> 
    <string name="incorrect_pin">Incorrect Pin</string> 
    <string name="add_new_email_contact">Add new email contact</string> 
    <string name="your_gmail_address">Your Gmail address</string> 
    <string name="password">Password</string> 
    <string name="renter_password">Renter password</string> 
    <string name="passwords_dont_match">Passwords dont match</string> 
    <string name="didnt_fill_out_all_the_forms">Didnt fill out all the forms</string> 
    <string name="this_person_needs_your_help_they_are_at_">"This person needs your help. They are at: "</string> 
    <string name="help_alert_">Help alert!</string> 
    <string name="video_received">Video received</string> 
    <string name="contacts">Contacts</string> 
    <string name="email_contacts">Email Contacts</string> 
    <string name="word_activation">Word activation</string> 
    <string name="personal_info">Personal info</string> 
    <string name="change_password">Change password</string> 
    <string name="change_details">Change details</string> 
    <string name="information">Information</string> 
    <string name="help">Help</string> 
    <string name="first_name">First name</string> 
    <string name="second_name">Second name</string> 
    <string name="mailer_name">Mailer Name</string> 
    <string name="email_address">Email Address</string> 
    <string name="enter_old_pin">Enter old pin</string> 
    <string name="enter_new_pin">Enter new pin</string> 
    <string name="re_enter_new_pin">Re-enter new pin</string> 
    <string name="number">Number</string> 
    <string name="please_enter_the_word_you_want_to_use_to_activate_the_alert">Please enter the word you want to use to activate the alert</string> 
    <string name="word_activation_on">Word activation ON</string> 
    <string name="word_activation_off">Word activation OFF</string> 
    <string name="decibel_system_off">Decibel system OFF</string> 
    <string name="decibel_system_on">Decibel system ON</string> 
    <string name="you_must_enable_word_activation_first">You must enable Word activation first</string> 
    <string name="field_is_empty">field is empty</string> 
    <string name="one_of_the_fields_are_empty">One of the fields are empty</string> 
    <string name="old_pin_does_not_match">Old pin does not match</string> 
    <string name="re_enter_value_does_not_match">Re-enter value does not match</string> 
    <string name="for_you_to_be_able_to_send_emails_you_must_supply_your_gmail_and_password_for_emergency_send_">For you to be able to send emails, you must supply your Gmail address and password for emergency send.</string> 
    <string name="please_enter_your_details_for_intial_sign_up">Please enter your details for intial sign up</string> 
    <string name="pin_must_be_4_digits">Pin must be 4 digits</string> 
    <string name="security_pin_does_not_match">Security Pin does not match</string> 
    <string name="must_enter_all_information">Must enter all information</string> 
    <string name="this_person_needs_your_help_at_">"This person needs your help at "</string>
</resources>
